fixed white space on mobile devices, added cpu graphs

--- a/web/theme.css
+++ b/web/theme.css
@@ -1,4 +1,13 @@
+/* http://stackoverflow.com/questions/17005500/bootstrap-css-responsive-left-with-a-white-space-on-the-right */
+
+html {
+  width: auto !important;
+  overflow-x: hidden !important;
+}
+
 body {
+  width: auto !important;
+  overflow-x: hidden !important;
   padding-top: 70px;
   padding-bottom: 30px;
 }
